# node

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  docker-compose.yml  zizmor.yml
.cargo/: config.toml
.config/: rustfmt.toml
.github/: actionlint.yaml
.github/actions/debian/: action.yml
.github/workflows/: book.yml  build-docker.yml  build-docs.yml  changelog.yml  ci.yml  cleanup-workflows.yml  nightly.yml  publish-crates.yml  publish-debian-all.yml  publish-debian.yml  publish-docker.yml  trigger-deploy-docs.yml  zizmor.yml
compose/: monitor.yml  telemetry.yml
compose/grafana/: datasources.yml
compose/grafana/dashboards/: miden-node.json
compose/tempo/: tempo.yaml
crates/block-producer/: Cargo.toml  README.md
crates/block-producer/src/: block_prover.rs  errors.rs  lib.rs  proof_scheduler.rs  rpc_sync.rs
crates/block-producer/src/batch_builder/: mod.rs
crates/block-producer/src/block_builder/: mod.rs
crates/block-producer/src/domain/: batch.rs  transaction.rs
crates/block-producer/src/mempool/: mod.rs  tests.rs
crates/block-producer/src/mempool/graph/: batch.rs  dag.rs  transaction.rs
crates/block-producer/src/mempool/tests/: add_transaction.rs  add_user_batch.rs
crates/block-producer/src/server/: mod.rs  tests.rs
crates/block-producer/src/store/: mod.rs
crates/block-producer/src/test_utils/: batch.rs
crates/db/: Cargo.toml  README.md
crates/db/src/: errors.rs  lib.rs
crates/db/src/migration/: build_script.rs  builder.rs  entry.rs  migrator.rs  mod.rs  schema.rs
crates/grpc-error-macro/: Cargo.toml  README.md
crates/large-smt-backend-rocksdb/: Cargo.toml  README.md
crates/large-smt-backend-rocksdb/src/: helpers.rs  lib.rs  rocksdb.rs
crates/ntx-builder/: Cargo.toml
crates/ntx-builder/src/: builder.rs  coordinator.rs  lib.rs  validator.rs
crates/ntx-builder/src/actor/: account_state.rs  execute.rs  mod.rs
crates/ntx-builder/src/clients/: store.rs
crates/ntx-builder/src/db/: mod.rs  schema.rs
crates/ntx-builder/src/db/migrations/2026020900000_setup/: up.sql
crates/ntx-builder/src/db/models/queries/: notes.rs  tests.rs
crates/proto/: Cargo.toml  README.md  build.rs
crates/proto/src/: lib.rs
crates/proto/src/clients/: mod.rs
crates/proto/src/decode/: mod.rs
crates/proto/src/domain/: account.rs  batch.rs  block.rs  digest.rs  mempool.rs  merkle.rs  mod.rs  note.rs  nullifier.rs  transaction.rs
crates/proto/src/domain/account/: tests.rs
crates/proto/src/errors/: mod.rs
crates/remote-prover-client/: Cargo.toml
crates/rocksdb-cxx-linkage-fix/: Cargo.toml  README.md
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: lib.rs  tests.rs
crates/rpc/src/server/: api.rs  mod.rs
crates/store/: Cargo.toml  README.md  build.rs
crates/store/src/: blocks.rs  data_directory.rs  errors.rs  lib.rs  proven_tip.rs
crates/store/src/account_state_forest/: mod.rs  tests.rs
crates/store/src/accounts/: mod.rs
crates/store/src/db/: migrations.rs  mod.rs  schema.rs  tests.rs
crates/store/src/db/migrations/: 001_initial.sql
crates/store/src/db/migrations/2025062000000_setup/: up.sql
crates/store/src/db/migrations/2026042800000_add_idx_transactions_sync/: down.sql  up.sql
crates/store/src/db/migrations/2026051800000_add_idx_accounts_latest_code_commitment/: down.sql  up.sql
crates/store/src/db/models/queries/: accounts.rs  block_headers.rs  notes.rs  nullifiers.rs  transactions.rs
crates/store/src/db/models/queries/accounts/: at_block.rs  delta.rs  tests.rs
crates/store/src/db/models/queries/accounts/delta/: tests.rs
crates/store/src/genesis/: mod.rs
crates/store/src/genesis/config/: mod.rs  tests.rs
crates/store/src/genesis/config/samples/02-with-account-files/: agglayer_faucet_eth.mac  agglayer_faucet_usdc.mac  bridge.mac
crates/store/src/server/: api.rs  block_producer.rs  block_prover_client.rs  mod.rs  ntx_builder.rs  proof_scheduler.rs  replica.rs  replica_client.rs  replica_sync.rs  rpc_api.rs
crates/store/src/state/: account.rs  apply_block.rs  apply_proof.rs  bootstrap.rs  disk_monitor.rs  loader.rs  mod.rs  notifications.rs  replica.rs  subscription.rs  sync_state.rs  writer.rs  writer_guard.rs
crates/test-macro/: Cargo.toml
crates/tracing/: Cargo.toml  README.md
crates/tracing-macro/: Cargo.toml
crates/tracing-macro/src/: event.rs  instrument.rs  level.rs  lib.rs  metadata.rs  span.rs  target.rs  user.rs
crates/tracing/src/: filter.rs  install.rs  lib.rs  stdout.rs  test_utils.rs  user.rs
crates/tracing/src/event/: mod.rs
crates/tracing/src/exporter/: mod.rs  otel.rs  stdout.rs
crates/tracing/src/field/: mod.rs  word.rs
crates/tracing/src/internal/: mod.rs
crates/tracing/src/object/: block.rs  mod.rs
crates/tracing/src/span/: error.rs  mod.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: clap.rs  fee.rs  fifo_cache.rs  grpc.rs  lib.rs  limiter.rs  logging.rs  lru_cache.rs  retry.rs  spawn.rs  tasks.rs
crates/utils/src/clap/: rocksdb.rs
crates/utils/src/grpc/: layers.rs
crates/utils/src/tracing/: grpc.rs  span_ext.rs
crates/validator/: Cargo.toml
crates/validator/src/server/: mod.rs  tests.rs
crates/validator/src/signers/: kms.rs  mod.rs
crates/validator/src/tx_validation/: data_store.rs  mod.rs
docs/internal/src/: SUMMARY.md  block-producer.md  codebase.md  components.md  index.md  monitoring.md  ntx-builder.md  oddities.md  rpc.md  store.md  validator.md
packaging/node/: postinst  postrm
packaging/ntx-builder/: miden-ntx-builder.service  postinst  postrm
packaging/validator/: miden-validator.service  postinst  postrm
proto/: Cargo.toml  README.md
proto/proto/: README.md  rpc.proto
proto/proto/internal/: block_producer.proto  ntx_builder.proto  store.proto
proto/proto/types/: blockchain.proto  transaction.proto
scripts/: publish-crates.sh  run-node.sh
xtask/src/: main.rs
