[package]
authors.workspace      = true
description            = "Shared database capabilities for Miden node"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["database", "miden", "node"]
license.workspace      = true
name                   = "miden-node-db"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow          = { workspace = true }
build-rs        = { workspace = true }
codegen         = { workspace = true }
deadpool        = { default-features = false, workspace = true }
deadpool-diesel = { features = ["sqlite"], workspace = true }
deadpool-sync   = { default-features = false, workspace = true }
diesel          = { features = ["sqlite"], workspace = true }
fs-err          = { workspace = true }
miden-protocol  = { workspace = true }
rusqlite        = { workspace = true }
sha2            = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }

[lib]
doctest = false
