[package]
categories  = ["no-std"]
description = "Procedural macro for deriving GrpcError trait (internal implementation detail - use miden-node-proto)"
keywords    = ["grpc", "miden", "node"]
name        = "miden-node-grpc-error-macro"

edition.workspace      = true
license.workspace      = true
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[lib]
doctest    = false
proc-macro = true
test       = false

[dependencies]
quote = { workspace = true }
syn   = { features = ["full"], workspace = true }
