[package]
description            = "Miden node's network transaction builder component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node"]
license.workspace      = true
name                   = "miden-node-ntx-builder"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
anyhow                     = { workspace = true }
diesel                     = { features = ["numeric", "sqlite"], workspace = true }
diesel_migrations          = { features = ["sqlite"], workspace = true }
futures                    = { workspace = true }
libsqlite3-sys             = { workspace = true }
miden-node-db              = { workspace = true }
miden-node-proto           = { workspace = true }
miden-node-proto-build     = { features = ["internal"], workspace = true }
miden-node-utils           = { workspace = true }
miden-protocol             = { default-features = true, workspace = true }
miden-remote-prover-client = { features = ["tx-prover"], workspace = true }
miden-standards            = { workspace = true }
miden-tx                   = { features = ["concurrent"], workspace = true }
thiserror                  = { workspace = true }
tokio                      = { features = ["rt-multi-thread"], workspace = true }
tokio-stream               = { features = ["net"], workspace = true }
tonic                      = { workspace = true }
tonic-reflection           = { workspace = true }
tower-http                 = { workspace = true }
tracing                    = { workspace = true }
url                        = { workspace = true }

[build-dependencies]
build-rs = { workspace = true }

[dev-dependencies]
miden-node-utils = { features = ["testing"], workspace = true }
miden-protocol   = { default-features = true, features = ["testing"], workspace = true }
miden-standards  = { features = ["testing"], workspace = true }
rand_chacha      = { workspace = true }
rstest           = { workspace = true }
tempfile         = { workspace = true }
