[package]
authors.workspace      = true
description            = "Client library for the Miden blockchain remote prover"
edition.workspace      = true
keywords               = ["client", "miden", "prover", "remote"]
license.workspace      = true
name                   = "miden-remote-prover-client"
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
crate-type = ["lib"]
doctest    = false
test       = false

[features]
batch-prover = ["dep:miden-protocol", "dep:tokio"]
block-prover = ["dep:miden-protocol", "dep:tokio"]
default      = ["std"]
std          = ["miden-protocol/std", "miden-tx/std"]
tx-prover    = ["dep:miden-protocol", "dep:miden-tx", "dep:tokio"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom             = { features = ["wasm_js"], version = "0.4" }
tonic                 = { features = ["codegen"], workspace = true }
tonic-web-wasm-client = { default-features = false, version = "0.9" }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
tonic = { features = ["codegen", "tls-native-roots", "tls-ring", "transport"], workspace = true }

[lints]
workspace = true

[dependencies]
miden-protocol = { optional = true, workspace = true }
miden-tx       = { optional = true, workspace = true }
prost          = { default-features = false, features = ["derive"], workspace = true }
thiserror      = { workspace = true }
tokio          = { default-features = false, features = ["sync"], optional = true, workspace = true }
tonic-prost    = { workspace = true }

[build-dependencies]
build-rs               = { workspace = true }
fs-err                 = { workspace = true }
miden-node-proto-build = { workspace = true }
miette                 = { features = ["fancy"], workspace = true }
tonic-prost-build      = { workspace = true }

[package.metadata.cargo-shear]
ignored = [
  "getrandom",
  "prost",
  "tonic-prost", # used in generated OUT_DIR code
]
