[package]
authors.workspace      = true
description            = "Miden C++ stdlib link helper"
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "miden-node-rocksdb-cxx-linkage-fix"
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
doctest = false
path    = "src/lib.rs"
test    = false

[lints]
workspace = true

[dependencies]
