[package]
authors.workspace      = true
description            = "Miden node's front-end RPC server"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "rpc"]
license.workspace      = true
name                   = "miden-node-rpc"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
anyhow                    = { workspace = true }
futures                   = { workspace = true }
http                      = { workspace = true }
mediatype                 = { version = "0.21" }
miden-node-block-producer = { workspace = true }
miden-node-proto          = { workspace = true }
miden-node-proto-build    = { workspace = true }
miden-node-store          = { workspace = true }
miden-node-utils          = { workspace = true }
miden-protocol            = { default-features = true, workspace = true }
miden-tx                  = { features = ["concurrent"], workspace = true }
miden-tx-batch-prover     = { workspace = true }
semver                    = { version = "1.0" }
thiserror                 = { workspace = true }
tokio                     = { features = ["macros", "net", "rt-multi-thread"], workspace = true }
tokio-stream              = { features = ["net"], workspace = true }
tonic                     = { default-features = true, features = ["tls-native-roots", "tls-ring"], workspace = true }
tonic-reflection          = { workspace = true }
tonic-web                 = { workspace = true }
tower                     = { workspace = true }
tower-http                = { features = ["trace"], workspace = true }
tracing                   = { workspace = true }
url                       = { workspace = true }

[dev-dependencies]
miden-node-utils = { features = ["testing", "tracing-forest"], workspace = true }
miden-protocol   = { default-features = true, features = ["testing"], workspace = true }
miden-standards  = { workspace = true }
reqwest          = { workspace = true }
rstest           = { workspace = true }
tempfile         = { workspace = true }
