[package]
authors.workspace      = true
description            = "Miden node's state store component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "store"]
license.workspace      = true
name                   = "miden-node-store"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow                          = { workspace = true }
arc-swap                        = "1"
deadpool                        = { default-features = false, features = ["managed", "rt_tokio_1"], version = "0.12" }
deadpool-diesel                 = { features = ["sqlite"], version = "0.6" }
diesel                          = { features = ["numeric", "sqlite"], version = "2.3" }
diesel_migrations               = { features = ["sqlite"], version = "2.3" }
fs-err                          = { workspace = true }
hex                             = { version = "0.4" }
indexmap                        = { workspace = true }
libsqlite3-sys                  = { workspace = true }
miden-block-prover              = { workspace = true }
miden-crypto                    = { features = ["concurrent"], workspace = true }
miden-large-smt-backend-rocksdb = { optional = true, workspace = true }
miden-node-db                   = { workspace = true }
miden-node-proto                = { workspace = true }
miden-node-proto-build          = { features = ["internal"], workspace = true }
miden-node-utils                = { workspace = true }
miden-remote-prover-client      = { features = ["block-prover"], workspace = true }
miden-standards                 = { workspace = true }
# TODO remove `testing` from `miden-protocol`, required for `BlockProof::new_dummy`
miden-protocol    = { features = ["std", "testing"], workspace = true }
pretty_assertions = { workspace = true }
rand              = { workspace = true }
rand_chacha       = { workspace = true }
serde             = { features = ["derive"], version = "1" }
thiserror         = { workspace = true }
tokio             = { features = ["fs", "rt-multi-thread"], workspace = true }
tokio-stream      = { features = ["net"], workspace = true }
toml              = { workspace = true }
tonic             = { default-features = true, workspace = true }
tonic-reflection  = { workspace = true }
tower-http        = { features = ["util"], workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }

[build-dependencies]
build-rs = { workspace = true }
fs-err   = { workspace = true }
# TODO: consider removing the `testing` from relevant functions in miden-agglayer
miden-agglayer  = { features = ["testing"], workspace = true }
miden-protocol  = { features = ["std"], workspace = true }
miden-standards = { workspace = true }

[dev-dependencies]
assert_matches        = { workspace = true }
criterion             = "0.8"
fs-err                = { workspace = true }
miden-node-test-macro = { workspace = true }
miden-node-utils      = { features = ["testing", "tracing-forest"], workspace = true }
miden-protocol        = { default-features = true, features = ["testing"], workspace = true }
miden-standards       = { features = ["testing"], workspace = true }
rand                  = { workspace = true }
regex                 = { version = "1.11" }
tempfile              = { workspace = true }
termtree              = "1.0"

[features]
default = ["rocksdb"]
rocksdb = ["dep:miden-large-smt-backend-rocksdb", "miden-node-utils/rocksdb"]

[[bench]]
harness           = false
name              = "account_tree"
required-features = ["rocksdb"]

[package.metadata.cargo-machete]
# This is an indirect dependency for which we need to enable optimisations/features
# via feature flags. Because we don't use it directly in code, machete
# identifies it as unused.
ignored = ["libsqlite3-sys", "miden-crypto"]
