[package]
authors.workspace      = true
description            = "Miden node's test macro"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["macro", "miden", "node", "utils"]
license.workspace      = true
name                   = "miden-node-test-macro"
publish                = false
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[lints]
workspace = true

[dependencies]
quote = { workspace = true }
syn   = { features = ["extra-traits", "full"], workspace = true }

[lib]
doctest    = false
proc-macro = true
test       = false
