[package]
authors.workspace      = true
description            = "Procedural macros for Miden node tracing"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["macro", "miden", "node", "tracing"]
license.workspace      = true
name                   = "miden-node-tracing-macro"
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn   = { features = ["full"], version = "2.0" }
